force-app/main/default/objects/Release__c/fields/Additions__c.field-meta.xml
<CustomField>
    <fullName>Additions__c</fullName>
    <complianceGroup>Integrity - Uncontrolled</complianceGroup>
    <label>Additions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>