force-app/main/default/objects/Release__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <complianceGroup>Integrity - Uncontrolled</complianceGroup>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>