force-app/main/default/objects/Release__c/fields/Controlling_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Picklist__c</fullName>
    <description>A picklist used in the Apex PicklistUtil unit tests</description>
    <label>Controlling Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>