force-app/main/default/objects/Release__c/fields/Dependent_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist__c</fullName>
    <description>A picklist used in the Apex PicklistUtil unit tests</description>
    <label>Dependent Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controlling_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>