force-app/main/default/objects/Release__c/fields/Fixes__c.field-meta.xml
<CustomField>
    <fullName>Fixes__c</fullName>
    <complianceGroup>Integrity - Uncontrolled</complianceGroup>
    <description>Bug fixes in this release</description>
    <label>Fixes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>