force-app/main/default/objects/Release__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Date of the specified release</description>
    <label>Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>