force-app/main/default/objects/Release__c/fields/Release_Image__c.field-meta.xml
<CustomField>
    <fullName>Release_Image__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>An image that is displayed at the bottom of the release.</description>
    <inlineHelpText>A URL to an image that is displayed at the bottom of the release.</inlineHelpText>
    <label>Release Image</label>
    <type>Url</type>
</CustomField>