force-app/main/default/objects/Release__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <inlineHelpText>A URL to extended release notes.</inlineHelpText>
    <label>Release Notes</label>
    <type>Url</type>
</CustomField>