force-app/main/default/objects/Release__c/validationRules/VR01_URL_HTTP_VALIDATION.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_URL_HTTP_VALIDATION</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &&
        (NOT(ISBLANK(Release_Notes__c) || BEGINS(Release_Notes__c  , "http")) ||
        NOT(ISBLANK(Release_Image__c) || BEGINS(Release_Image__c  , "http")))</errorConditionFormula>
    <errorMessage>The Release Notes and Release Image must begin with &quot;https://&quot; or &quot;http://&quot;</errorMessage>
</ValidationRule>